--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8085
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/crudsqldatabase
-spring.datasource.username=springuser
-spring.datasource.password=Aryasamaj#77
+spring.datasource.username=
+spring.datasource.password=
